# proteogram

./: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
docs/: evaluation_results_ranking_vs_baseline.md  improvements_v2.md  md_simulation_methodology.md  physics_informed_ranking_and_decomposed_gradcam.md  v2_overview.md  v2_similarity_design.md
docs/reports/: m1_two_stream.json  m1_two_stream.md  m2_metric_head.json  m2_metric_head.md  m2_metric_head.npz  m2_metric_head_before_fix.json  m3_reranker.json  m3_reranker.md  m3_reranker.pt  m4_ablation.json  m4_ablation.md  m4_ablation_before_fix.json  m4_ablation_before_fix.md  m4_analysis.md  m4_fix_comparison.md  v2_implementation_summary.md
proteogram/: image_similarity_v2.py  nonbonded_forces.py  proteogram_v2.py
proteogram/v2/: __init__.py  encoders.py  faiss_search.py  features.py  gradcam.py  image_similarity.py  losses.py  metrics.py  nonbonded_forces.py  normalisation.py  proteogram.py  ranking_loss.py  reranker.py
scripts/: config.example.yml  convert2fasta.sh  create_annotation_file.py  create_balanced_scope_train_eval_lists.py  create_v2_proteograms.py  evaluate_methods_v2.py  measure_similarity_v2.py  train_cnn_model.py  train_multiple_models.py
scripts/v2/: _synthetic_dataset.py  compute_norm_stats.py  config (Copy).yml  config.example.yml  create_annotation_file.py  create_v2_proteograms.py  evaluate_methods_v2.py  explain_energy_channels.py  explain_similarity.py  measure_similarity_v2.py  query_similar_proteins.py  run_ablation.py  train_metric_head.py  train_multiple_models.py  train_reranker.py  train_two_stream.py  validate_ranking_loss.py
scripts/v2/reports/: m1_two_stream.json  m2_metric_head.json  m2_metric_head.npz  m4_ablation.json  m4_ablation.md
