[project]
name = "proteogram"
version = "0.0.3"
description = "Protein structure to image manipulation and analysis."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
cuda12 = [
  "nvidia-cuda-nvcc-cu12==12.9.86",
  "openmm-cuda-12==8.4.0.post2"
]
test = ["pytest", "pytest-cov"]
notebook = [
  "jupyterlab>=4.2.5",
  "nglview>=3.1.4",
  "rcsbsearchapi>=1.5.1"
]

[tool.setuptools.packages.find]
# Exclude patterns should match the full package name
exclude = ["assets", "paper", "notebooks", "scripts", "tmp"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
