[project]
name = "proteogram"
version = "0.0.3"
description = "Protein structure to image manipulation and analysis."
requires-python = ">=3.11"
dependencies = [
  "biopython>=1.8",
  "matplotlib>=3.6",
  "MDAnalysis[analysis,extra_formats,parallel]>=2.10.0",
  "numpy>=1.26",
  "openmm>=8.4",
  "pandas>=3.0",
  "pdbfixer @ git+https://github.com/openmm/pdbfixer@94cfa4c",
  "pillow>=12.1",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchsummary>=1.5",
  "kmeans-pytorch>=0.3",
  "tqdm>=4.67",
  "psutil>=7.2.2",
  "objgraph>=3.6.2",
  "PyYAML>=6.0",
  "pyrotein @ git+https://github.com/carbonscott/pyrotein.git@main",
  "faiss-cpu>=1.13.2",
]

[project.optional-dependencies]
cuda12 = [
  "openmm==8.4.0",
  "nvidia-cuda-nvcc-cu12==12.9.86",
  "openmm-cuda-12==8.4.0.post2"
]
test = ["pytest", "pytest-cov"]
notebook = [
  "jupyterlab>=4.2.5",
  "nglview>=3.1.4",
  "rcsbsearchapi>=1.5.1"
]

[tool.setuptools.packages.find]
# Exclude patterns should match the full package name
exclude = ["assets", "docs", "paper", "notebooks", "scripts", "tmp"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
